name:                ec2-split-objs-bug
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/joehillen/static-bug#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Hillenbrand
maintainer:          joehillen@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ec2-split-objs-bug-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , amazonka-ec2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joehillen/ec2-split-objs-bug
